# longreach

./: .gitignore  CNAME  _config.yml  draw_home.js  home.css  home.js  index.html  linger.js  mySketch.js  pledge-v2-experiment.html  styles.css  texts.js
.github/workflows/: deploy.yml
cards/: index.html  package.json  pnpm-lock.yaml  taxonomy.yml  vite.config.ts
cards/public/: 404.html
cards/report/: Makefile  api.py  email_template.html  email_template.txt  main.py  models.py  observations.py  pyproject.toml  report_template.md  template.txt  test.py
cards/report/templates/: report_template.md
cards/report/tests/: regen_fixtures.py  test_api.py  test_join_with.py  test_observations.py
cards/report/tests/fixtures/observations/: generative_and_classifier.md  high_concern_all_safe.md  high_concern_missing_chars.md  low_concern_with_others.md  public_input.md
cards/src/: App.module.css  App.tsx  index.css  main.tsx
cards/src/components/AboutBox/: AboutBox.module.css  AboutBox.tsx
cards/src/components/Card/: Card.module.css  Card.tsx
cards/src/components/CurrentCard/: CurrentCard.module.css  CurrentCard.tsx
cards/src/components/Deck/: Deck.module.css  Deck.tsx
cards/src/components/DiscardPile/: DiscardPile.module.css  DiscardPile.tsx
cards/src/components/Filter/: Filter.module.css  Filter.tsx
cards/src/data/: cards.ts
cards/src/lib/: api.ts  campaign.ts  supabaseClient.ts
cards/src/utils/: shuffle.ts
cards/taxonomy/: 0001.yml
moldy/: draw_home.js  index.html  styles.css
new/: home.css  home.js  index.html  texts.js
(+8 files in other folders)
